Fix Links not wrapping

--- a/website/src/styles/plant_sections.module.css
+++ b/website/src/styles/plant_sections.module.css
@@ -20,6 +20,7 @@
     padding: .5%;
     justify-items: start;
     margin-left: 13%;
+    word-wrap: anywhere;
 }
 
 /*
